syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "domain.proto";

message GetDomainRequest {
	google.protobuf.StringValue domain_id = 1 [(validator.field) = {msg_exists: true}];
}

message GetDomainResponse {
	Domain domain = 1;
}
